# OxSurGemma

./: .gitignore  PUSH_TO_GITHUB.sh  README.md  environment.yml  pyproject.toml  requirements.txt  run.sh
cvs_models/: run_cvs_inference.py
cvs_models/colenet/: __init__.py  colenet_model.py
frame_attributes_tasks/: cholec20_model.py
instrument_triplet_tasks/: cholect50_model.py
phase_detection_workflow/workflow_codes/: resnet50_surgical_workflow_fast.py
scene_segmentation_utils/: cholecseg8k_yolov8.py
surgical_copilot/: __init__.py  config.py  gradio_demo.py  llm_local.py  main.py  parallel_tools.py  registry.py
surgical_copilot/audio/: __init__.py  stt.py  tts.py
surgical_copilot/docs/: system_prompts.txt
surgical_copilot/tools/: __init__.py  base.py  critical_view_of_safety.py  frame_attributes.py  instrument_tracking.py  object_detection_merged.py  phase_detection.py  rag_retrieval.py  scene_segmentation.py  ssg_vqa.py  triplet_recognition.py
surgical_rag/: __init__.py  rag_retrieval.py
